Fixed bug #34982 (array_walk_recursive() modifies elements outside function scope)